tests/specs/ecosystem/bureaudouble/outils/0_0_24.test
bureaudouble/outils/0.0.24
===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2536 [ERROR]: Type '0' cannot be used to index type 'InferResult<T>'.
export type QueryFunction<V> = <T extends CompiledQuery<unknown>>(fn: (qb: Kysely<V>) => T) => Promise<InferResult<T>[0][]>;
                                                                                                       ~~~~~~~~~~~~~~~~~
    at file://<tmpdir>/database/sqlite/createQueryFunction.ts:7:104

